--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Homework06
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Pythagorean Theorem and Trimmed Mean Functions
 Version: 0.1.0
 Author: Tobias Konieczka
 Maintainer: The package maintainer <konieczkat@outlook.com>
